src/objects/Analytic_History__c.object
<CustomObject>
    <fields>
        <fullName>Analytic_Source_from_tracking_cookie__c</fullName>
        <label>Analytic Source (from tracking cookie)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Analytic History</relationshipLabel>
        <relationshipName>Analytic_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GA_AdGroup__c</fullName>
        <label>GA-AdGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <label>GA-Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Keywords__c</fullName>
        <label>GA-Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <label>GA-Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Source Detail</label>
        <referenceTo>Lead_Source_Detail__c</referenceTo>
        <relationshipLabel>Analytic History</relationshipLabel>
        <relationshipName>Analytic_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Analytic History</relationshipLabel>
        <relationshipName>Analytic_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <label>Original Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_ID__c</fullName>
        <label>Web ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Analytic History</label>
    <nameField>
        <displayFormat>AH-{0000000}</displayFormat>
        <label>Analytic History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analytic History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>